--- a/Volmer/css/style.css
+++ b/Volmer/css/style.css
@@ -70,6 +70,8 @@ body {
 
   .container {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
   
   .main-mobile {
@@ -77,6 +79,8 @@ body {
     height: 2600px; 
     position: relative; 
     overflow: hidden;
+    visibility: visible;
+    opacity: 1;
   }
 
   .logo-mobile {
@@ -176,6 +180,8 @@ body {
 
   .container {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .main-mobile {
@@ -183,6 +189,8 @@ body {
     height: 2600px; 
     position: relative; 
     overflow: hidden;
+    visibility: visible;
+    opacity: 1;
   }
 
   .logo-mobile {
@@ -282,6 +290,8 @@ body {
 
   .container {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
   
   .main-mobile {
@@ -289,6 +299,8 @@ body {
     height: 2600px; 
     position: relative; 
     overflow: hidden;
+    visibility: visible;
+    opacity: 1;
   }
 
   .logo-mobile {
@@ -387,6 +399,8 @@ body {
 
   .container {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
   
   .main-mobile {
@@ -394,6 +408,8 @@ body {
     height: 2700; 
     position: relative; 
     overflow: hidden;
+    visibility: visible;
+    opacity: 1;
   }
 
   .logo-mobile {
@@ -492,11 +508,15 @@ body {
 
   .container {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .main-mobile {
     position: relative; 
     overflow: hidden;
+    visibility: visible;
+    opacity: 1;
   }
 
   .logo-mobile {
@@ -601,6 +621,8 @@ body {
     display: flex;
     flex-direction: row-reverse;
     font-family: 'VT323', monospace;
+    visibility: visible;
+    opacity: 1;
   }
 
   .ursec-container-comp {
@@ -611,26 +633,38 @@ body {
 
   .main-mobile {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-2560 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1920 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1440 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1280 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
   
   .container-1680 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1024 {
@@ -640,6 +674,8 @@ body {
       width: 100%;
       display: flex;
       flex-direction: row-reverse;
+      visibility: visible;
+      opacity: 0;
   }
 
   .container-1024 section {
@@ -1674,30 +1710,44 @@ body {
     width: 100%;
     display: flex;
     flex-direction: row-reverse;
+    visibility: visible;
+    opacity: 1;
   }
 
   .main-mobile {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
   
   .container-1024 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1440 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1680 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1920 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-2560 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1280 {
@@ -1707,6 +1757,8 @@ body {
       width: 100%;
       display: flex;
       flex-direction: row-reverse;
+      visibility: visible;
+      opacity: 1;
   }
 
   .container-1280 section {
@@ -2748,30 +2800,44 @@ body {
     width: 100%;
     display: flex;
     flex-direction: row-reverse;
+    visibility: visible;
+    opacity: 1;
   }
 
   .main-mobile {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
   
   .container-1024 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1280 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1680 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1920 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-2560 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1440 {
@@ -2781,6 +2847,8 @@ body {
       width: 100%;
       display: flex;
       flex-direction: row-reverse;
+      visibility: visible;
+      opacity: 1;
   }
 
   .container-1440 section {
@@ -3823,30 +3891,44 @@ body {
     width: 100%;
     display: flex;
     flex-direction: row-reverse;
+    visibility: visible;
+    opacity: 1;
   }
 
   .main-mobile {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
   
   .container-1024 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1280 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1440 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1920 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-2560 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1680 {
@@ -3856,6 +3938,8 @@ body {
       width: 100%;
       display: flex;
       flex-direction: row-reverse;
+      visibility: visible;
+      opacity: 1;
   }
 
   .container-1680 section {
@@ -4891,30 +4975,44 @@ body {
     width: 100%;
     display: flex;
     flex-direction: row-reverse;
+    visibility: visible;
+    opacity: 1;
   }
 
   .main-mobile {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
   
   .container-1024 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1280 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1440 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1680 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-2560 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1920 {
@@ -4924,6 +5022,8 @@ body {
       width: 100%;
       display: flex;
       flex-direction: row-reverse;
+      visibility: visible;
+      opacity: 1;
   }
 
   .container-1920 section {
@@ -5963,30 +6063,44 @@ body {
     width: 100%;
     display: flex;
     flex-direction: row-reverse;
+    visibility: visible;
+    opacity: 1;
   }
 
   .main-mobile {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
   
   .container-1024 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1280 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1440 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1680 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-1920 {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 
   .container-2560 {
@@ -5996,6 +6110,8 @@ body {
       width: 100%;
       display: flex;
       flex-direction: row-reverse;
+      visibility: visible;
+      opacity: 1;
   }
 
   .container-2560 section {
