--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,10 @@ body {
   visibility: hidden;
 }
 
+.main-mobile pre {
+  font-family: monospace !important;
+}
+
 /*320**320**320**320**320**320**320**320**320**320**320**320**320**320**320**320**320**320**320**320**320**320**320**320**320**320**320**320**320**320**320*/
 
 @media only screen and (max-width: 320px) {
