--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ body {
     overflow-y: scroll;
     visibility: visible;
     opacity: 1;
+    touch-action: auto;
   }
 
   .logo-mobile {
@@ -194,6 +195,7 @@ body {
     overflow-y: scroll;
     visibility: visible;
     opacity: 1;
+    touch-action: auto;
   }
 
   .logo-mobile {
@@ -305,6 +307,7 @@ body {
     overflow-y: scroll;
     visibility: visible;
     opacity: 1;
+    touch-action: auto;
   }
 
   .logo-mobile {
@@ -415,6 +418,7 @@ body {
     overflow-y: scroll;
     visibility: visible;
     opacity: 1;
+    touch-action: auto;
   }
 
   .logo-mobile {
@@ -523,6 +527,7 @@ body {
     overflow-y: scroll;
     visibility: visible;
     opacity: 1;
+    touch-action: auto;
   }
 
   .logo-mobile {
