--- a/css/style.css
+++ b/css/style.css
@@ -89,8 +89,7 @@ body {
   .logo-mobile {
     font-size: 6.5px; 
     margin-top: 35%; 
-    display: flex; 
-    justify-content: center; 
+    text-align: center;
   }
 
   .logo-text-mobile {
@@ -200,8 +199,7 @@ body {
   .logo-mobile {
     font-size: 7px; 
     margin-top: 35%; 
-    display: flex; 
-    justify-content: center; 
+    text-align: center;
   }
 
   .logo-text-mobile {
@@ -311,8 +309,7 @@ body {
   .logo-mobile {
     font-size: 8px; 
     margin-top: 45%; 
-    display: flex; 
-    justify-content: center; 
+    text-align: center;
   }
 
   .logo-text-mobile {
@@ -421,8 +418,7 @@ body {
   .logo-mobile {
     font-size: 9px; 
     margin-top: 50%; 
-    display: flex; 
-    justify-content: center; 
+    text-align: center; 
   }
 
   .logo-text-mobile {
@@ -529,8 +525,7 @@ body {
   .logo-mobile {
     font-size: 15px; 
     margin-top: 30%; 
-    display: flex; 
-    justify-content: center; 
+    text-align: center; 
   }
 
   .logo-text-mobile {
