--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ body {
   .logo-mobile {
     font-size: 6.5px; 
     margin-top: 35%; 
-    text-align: center;
+    text-align: start;
     font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   }
 
@@ -201,7 +201,7 @@ body {
   .logo-mobile {
     font-size: 7px; 
     margin-top: 35%; 
-    text-align: center;
+    text-align: start;
     font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   }
 
@@ -313,7 +313,7 @@ body {
   .logo-mobile {
     font-size: 8px; 
     margin-top: 45%; 
-    text-align: center;
+    text-align: start;
     font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   }
 
@@ -424,7 +424,7 @@ body {
   .logo-mobile {
     font-size: 9px; 
     margin-top: 50%; 
-    text-align: center; 
+    text-align: start;
     font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   }
 
@@ -533,7 +533,7 @@ body {
   .logo-mobile {
     font-size: 15px; 
     margin-top: 30%; 
-    text-align: center; 
+    text-align: start;
     font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   }
 
