--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ body {
   }
 
   .logo-mobile {
-    font-size: 6.5px; 
+    font-size: 0.7rem;
     margin-top: 35%; 
     text-align: start;
     font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
@@ -200,7 +200,7 @@ body {
   }
 
   .logo-mobile {
-    font-size: 7px; 
+    font-size: 0.7rem; 
     margin-top: 35%; 
     text-align: start;
     font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
@@ -313,7 +313,7 @@ body {
   }
 
   .logo-mobile {
-    font-size: 8px; 
+    font-size: 0.7rem; 
     margin-top: 45%; 
     text-align: start;
     font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
@@ -425,7 +425,7 @@ body {
   }
 
   .logo-mobile {
-    font-size: 9px; 
+    font-size: 0.7rem; 
     margin-top: 50%; 
     text-align: start;
     font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
@@ -535,7 +535,7 @@ body {
   }
 
   .logo-mobile {
-    font-size: 15px; 
+    font-size: 0.7rem; 
     margin-top: 30%; 
     text-align: start;
     font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
