--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,10 @@ body {
   .main-mobile {
     display: block; 
     height: 2600px; 
-    position: relative; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     overflow-x: hidden;
     visibility: visible;
     opacity: 1;
@@ -192,7 +195,10 @@ body {
   .main-mobile {
     display: block; 
     height: 2600px; 
-    position: relative; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%; 
     overflow: hidden;
     visibility: visible;
     opacity: 1;
@@ -306,7 +312,10 @@ body {
   .main-mobile {
     display: block; 
     height: 2600px; 
-    position: relative; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%; 
     overflow: hidden;
     visibility: visible;
     opacity: 1;
@@ -419,7 +428,10 @@ body {
   .main-mobile {
     display: block; 
     height: 2700; 
-    position: relative; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%; 
     overflow: hidden;
     visibility: visible;
     opacity: 1;
@@ -530,7 +542,10 @@ body {
   }
 
   .main-mobile {
-    position: relative; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     overflow: hidden;
     visibility: visible;
     opacity: 1;
