--- a/css/style.css
+++ b/css/style.css
@@ -898,6 +898,7 @@ body {
 
   .dvd-date {
     font-size: 11px;
+    color: #ff0000;
   }
 
   .terminal_container {
@@ -1663,7 +1664,7 @@ body {
 
   .btn-img {
     font-size: 18px;
-    color: #0f0;
+    color: #f00;
     background-color: #000000;
     border: none;
   }
@@ -1983,6 +1984,7 @@ body {
 
   .dvd-date {
     font-size: 12px;
+    color: #ff0000;
   }
 
   .terminal_container {
@@ -2754,7 +2756,7 @@ body {
 
   .btn-img {
     font-size: 18px;
-    color: #0f0;
+    color: #f00;
     background-color: #000000;
     border: none;
   }
@@ -3073,6 +3075,7 @@ body {
 
   .dvd-date {
     font-size: 14px;
+    color: #ff0000;
   }
 
   .terminal_container {
@@ -3845,7 +3848,7 @@ body {
 
   .btn-img {
     font-size: 20px;
-    color: #0f0;
+    color: #f00;
     background-color: #000000;
     border: none;
   }
@@ -4164,6 +4167,7 @@ body {
 
   .dvd-date {
     font-size: 14px;
+    color: #ff0000;
   }
 
   .terminal_container {
@@ -4931,7 +4935,7 @@ body {
 
   .btn-img {
     font-size: 24px;
-    color: #0f0;
+    color: #f00;
     background-color: #000000;
     border: none;
   }
@@ -5248,6 +5252,7 @@ body {
 
   .dvd-date {
     font-size: 16px;
+    color: #ff0000;
   }
 
   .terminal_container {
@@ -6015,7 +6020,7 @@ body {
 
   .btn-img {
     font-size: 26px;
-    color: #0f0;
+    color: #f00;
     background-color: #000000;
     border: none;
   }
@@ -6336,6 +6341,7 @@ body {
 
   .dvd-date {
     font-size: 20px;
+    color: #ff0000;
   }
 
   .terminal_container {
@@ -7108,7 +7114,7 @@ body {
 
   .btn-img {
     font-size: 34px;
-    color: #0f0;
+    color: #f00;
     background-color: #000000;
     border: none;
   }
