--- a/css/style.css
+++ b/css/style.css
@@ -1031,14 +1031,14 @@ body {
   .contact-1024 {
     position: absolute;
     top: 20px;
-    color:#00ff00;
+    color:#ff0000;
     margin-right: 280%;
     font-size: 22px;
   }
 
   .btn-1024 {
     position: relative;
-    color: #00ff00;
+    color: #ff0000;
   }
 
   .btn-1024:hover:before {
@@ -1059,7 +1059,7 @@ body {
     content: '';
     width: 100%;
     height: 1px;
-    background-color: #00ff00;
+    background-color: #ff0000;
     position: absolute;
     left: 0; bottom: -5px;
     -webkit-transform: scaleX(0);
@@ -2118,7 +2118,7 @@ body {
     position: absolute;
 
     top: 20px;
-    color:#00ff00;
+    color:#ff0000;
     background-color: #000000;
     margin-right: 285%;
     font-size: 22px;
@@ -2126,7 +2126,7 @@ body {
 
   .btn-1280 {
     position: relative;
-    color: #00ff00;
+    color: #ff0000;
   }
 
   .btn-1280:hover:before {
@@ -2147,7 +2147,7 @@ body {
     content: '';
     width: 100%;
     height: 1px;
-    background-color: #00ff00;
+    background-color: #ff0000;
     position: absolute;
     left: 0; bottom: -5px;
     -webkit-transform: scaleX(0);
@@ -3209,7 +3209,7 @@ body {
     position: absolute;
 
     top: 20px;
-    color:#00ff00;
+    color:#ff0000;
     background-color: #000000;
     margin-right: 285%;
     font-size: 22px;
@@ -3217,7 +3217,7 @@ body {
 
   .btn-1440 {
     position: relative;
-    color: #00ff00;
+    color: #ff0000;
   }
 
   .btn-1440:hover:before {
@@ -3238,7 +3238,7 @@ body {
     content: '';
     width: 100%;
     height: 1px;
-    background-color: #00ff00;
+    background-color: #ff0000;
     position: absolute;
     left: 0; bottom: -5px;
     -webkit-transform: scaleX(0);
@@ -4301,7 +4301,7 @@ body {
     position: absolute;
 
     top: 20px;
-    color:#00ff00;
+    color:#ff0000;
     background-color: #000000;
     margin-right: 290%;
     font-size: 22px;
@@ -4309,7 +4309,7 @@ body {
 
   .btn-1680 {
     position: relative;
-    color: #00ff00;
+    color: #ff0000;
   }
 
   .btn-1680:hover:before {
@@ -4330,7 +4330,7 @@ body {
     content: '';
     width: 100%;
     height: 1px;
-    background-color: #00ff00;
+    background-color: #ff0000;
     position: absolute;
     left: 0; bottom: -5px;
     -webkit-transform: scaleX(0);
@@ -5386,7 +5386,7 @@ body {
     position: absolute;
 
     top: 20px;
-    color:#00ff00;
+    color:#ff0000;
     background-color: #000000;
     margin-right: 283%;
     font-size: 28px;
@@ -5394,7 +5394,7 @@ body {
 
   .btn-1920 {
     position: relative;
-    color: #00ff00;
+    color: #ff0000;
   }
 
   .btn-1920:hover:before {
@@ -5415,7 +5415,7 @@ body {
     content: '';
     width: 100%;
     height: 1px;
-    background-color: #00ff00;
+    background-color: #ff0000;
     position: absolute;
     left: 0; bottom: -5px;
     -webkit-transform: scaleX(0);
@@ -6475,7 +6475,7 @@ body {
     position: absolute;
 
     top: 20px;
-    color:#00ff00;
+    color:#ff0000;
     background-color: #000000;
     margin-right: 283%;
     font-size: 38px;
@@ -6484,7 +6484,7 @@ body {
 
   .btn-2560 {
     position: relative;
-    color: #00ff00;
+    color: #ff0000;
   }
 
   .btn-2560:hover:before {
@@ -6505,7 +6505,7 @@ body {
     content: '';
     width: 100%;
     height: 2px;
-    background-color: #00ff00;
+    background-color: #ff0000;
     position: absolute;
     left: 0; bottom: -5px;
     -webkit-transform: scaleX(0);
