--- a/css/link.css
+++ b/css/link.css
@@ -1,9 +1,9 @@
-.stack {
+.Stack {
     display: grid;
     grid-template-columns: 1fr;
 }
 
-.stack span {
+.Stack span {
     font-weight: bold;
     grid-row-start: 1;
     grid-column-start: 1;
@@ -13,13 +13,14 @@
     --clip-top: calc(var(--stack-height) * var(--index));
     --clip-bottom: calc(var(--stack-height) * var(--inverse-index));
     clip-path: inset(var(--clip-top) 0 var(--clip-bottom) 0);
-    animation: stack 340ms cubic-bezier(.46,.29,0,1.24) 1 backwards calc(var(--index) * 120ms), glitch 2s ease infinite 2s alternate-reverse;
+    animation: Stack 340ms cubic-bezier(.46,.29,0,1.24) 1 backwards calc(var(--index) * 120ms), glitch 2s ease infinite 2s alternate-reverse;
+    background-color: rgb(0, 0, 0);
 }
 
-.stack span:nth-child(odd) { --glitch-translate: 8px; }
-.stack span:nth-child(even) { --glitch-translate: -8px; }
+.Stack span:nth-child(odd) { --glitch-translate: 8px; }
+.Stack span:nth-child(even) { --glitch-translate: -8px; }
 
-@keyframes stack {
+@keyframes Stack {
     0% {
         opacity: 0;
         transform: translateX(-50%);
@@ -39,7 +40,7 @@
     }
 }
 
-@keyframes glitch {
+@keyframes Glitch {
     0% {
         text-shadow: -2px 3px 0 red, 2px -3px 0 blue;
         transform: translate(var(--glitch-translate));
